@@ -1,0 +1,3 @@
+class Treasure < ActiveRecord::Base
+  has_and_belongs_to_many :parrots
+end
