@@ -1,0 +1,8 @@
+diamond:
+  name: $LABEL
+
+sapphire:
+  name: $LABEL
+
+ruby:
+  name: $LABEL
