@@ -1,5 +1,14 @@
 *SVN*
 
+* Foxy fixtures, from rathole (http://svn.geeksomnia.com/rathole/trunk/README)
+    - stable, autogenerated IDs
+    - specify associations (belongs_to, has_one, has_many) by label, not ID
+    - specify HABTM associations as inline lists
+    - autofill timestamp columns
+    - support YAML defaults
+    - fixture label interpolation
+  Enabled for fixtures that correspond to a model class and don't specify a primary key value.  #9981 [jbarnette]
+
 * Add docs explaining how to protect all attributes using attr_accessible with no arguments. Closes #9631 [boone, rmm5t]
 
 * Update add_index documentation to use new options api. Closes #9787 [kamal]
